merge fix compiler deprecated for values and class-ctor